--- a/Implementasi web-storage/index.html
+++ b/Implementasi web-storage/index.html
@@ -269,6 +269,14 @@ window.addEventListener('beforeunload', function () {
   sessionStorage.setItem(sessionUserAttemptsKey, 0);
   sessionUserAttemptsField.innerText = sessionStorage.getItem(sessionUserAttemptsKey);
 });
+destroyDataButton.addEventListener('click', function () {
+  sessionStorage.removeItem(sessionAnswerKey);
+  sessionStorage.removeItem(sessionUserAttemptsKey);
+  sessionStorage.removeItem(sessionUserIsPlayingKey);
+  localStorage.removeItem(localTotalVictoryKey);
+  localStorage.removeItem(localMaximumAttemptsKey);
+  alert('Mohon me-refresh halaman ini kembali');
+});
 </script>
 </body>
 </html>
